Use java.util.Base64
* The old one is not supported > Java 9